--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="cv-block block-intro border-bottom">
         <div class="container">
           <div class="avatar">
-            <img class="img-fluid rounded-circle" src="foto/fotoito.png.jpeg">
+            <img class="img-fluid rounded-circle" src="fotoito.png.jpeg">
           </div>
           <p>Hello! saya <strong>Christo Matindas</strong>.Saya berkuliah di kampus universitas klabat. Saya bercita-cita ingin menjadi seorang sukses, dan saya suka makan.</p>
         </div>
